# interval-map

./: CMakeLists.txt  README.md  interval_map  interval_map.hpp
include/: interval_map.hpp
test/: CMakeLists.txt  interval_map_test.cpp
